<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".fragments.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!--    <Button-->
<!--        android:id="@+id/send_notification"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Send Notification"/>-->

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/dashboard_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Dashboard"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            >
            <RelativeLayout
                android:id="@+id/samples_requested"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="1180"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/colorWhite"
                    android:text="@string/samples_requested"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_row="0"
            android:layout_column="2"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            >

            <RelativeLayout
                android:id="@+id/total_samples_collected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="1180"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/colorWhite"
                    android:text="@string/total_samples_collected"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            >

            <RelativeLayout
                android:id="@+id/total_samples_rejected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="1180"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/colorWhite"
                    android:text="@string/total_samples_rejected"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_row="1"
            android:layout_column="2"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <RelativeLayout
                android:id="@+id/samples_collected_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="1180"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/colorWhite"
                    android:text="@string/samples_history"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>

        <androidx.cardview.widget.CardView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/ic_cost"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Rs. 12000"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/total_revenue"
                        />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="Patient List"
            android:gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/view_all_patient_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="View all"
            android:textColor="@color/dimTextColor"
            android:layout_alignParentEnd="true"
            android:gravity="end|center_vertical"/>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/contenetPB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center_vertical">

    </ProgressBar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/d_patient_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>